# Capstone1_2021Spring

./: README.md  bonus_data_integration_2.cpp  data_integration.cpp  data_showshowshow.cpp  lua_script_ball.txt  lua_script_ball_stop.txt
ball_detection/: CMakeLists.txt  package.xml
ball_detection/src/: ball_detect.cpp  ball_detect_bonus.cpp  ball_detect_old.cpp
ball_harvesting_zone_GroupB/ball_detection/src/: ball_detect.cpp  ball_detect_0617.cpp  ball_detect_depth.cpp  ball_detect_given.cpp  ball_detect_radii.cpp  ball_detect_y.cpp
ball_harvesting_zone_GroupB/ball_harvesting/: CMakeLists.txt  package.xml
ball_harvesting_zone_GroupB/ball_harvesting/src/: ball_harvest.cpp
ball_harvesting_zone_GroupB/lidar_odometry/src/: lidar_odometry.cpp
ball_harvesting_zone_GroupB/path_finding/: CMakeLists.txt  package.xml
ball_harvesting_zone_GroupB/path_finding/src/: Astar.h  path_finding_node.cpp
ball_harvesting_zone_GroupB/vehicle_control/: CMakeLists.txt  package.xml
ball_harvesting_zone_GroupB/vehicle_control/src/: vehicle_control.cpp
bonus_package/: CMakeLists.txt  package.xml
bonus_package/launch/: bonus_launch.launch
bonus_package/src/: bonus_ball_detect.cpp  bonus_data_integration.cpp  bonus_data_integration_2.cpp  bonus_data_show.cpp  bonus_localization.cpp  bonus_path_planner.cpp
coppeliasim_models/: bonus_map.ttt  bonus_map_ver2.ttt  bonus_map_ver3.ttt  map_harvest_test.ttt  map_harvest_test_final.ttt  map_original.ttt  map_ver2.ttt  map_ver3.ttt  map_ver4.ttt  map_ver4_revised.ttt  map_ver5.ttt  map_ver5_ball_harvest.ttt  map_with_lidar_camera.ttt  mapmap.ttt  my_robot_ver1.ttm  my_robot_ver2.ttm  my_robot_ver3.ttm  my_robot_ver4.ttm  myimu.ttm  mylidar.ttm  mylidar_hokuyo.ttm  teamE_robot_LiDAT_Camera.ttm  teamE_robot_test.ttm  teamE_robot_ver1.ttm  teamE_robot_ver3.ttm  teamE_robot_ver6.ttm  teamE_robot_ver6_basket.ttm  teamE_robot_ver6_fillet.ttm  teamE_robot_ver6_longdoor.ttm  teamE_robot_ver6_longleg.ttm  teamE_robot_ver6_revised.ttm  teamE_robot_ver6_sus_final.ttm  teamE_robot_ver7.ttm  teamE_robot_ver7_sus.ttm  teamE_robot_withLIDAR.ttm
core_msgs/msg/: goal_position.msg
data_integrate/: CMakeLists.txt  package.xml
data_integrate/launch/: bonus_launch.launch  capstone_launch.launch
data_integrate/src/: data_integration.cpp  data_integration_bonus.cpp  data_show.cpp  data_show_bonus.cpp  data_showshowshow.cpp  path_planner.cpp
data_integrate_bonus/src/: data_integration_bonus.cpp
lidar_odometry/: CMakeLists.txt  package.xml
lidar_odometry/src/: lidar_odometry.cpp  localization.cpp
line_detection/: CMakeLists.txt  package.xml
line_detection/src/: line_detect.cpp
localization/: package.xml
localization/src/: localization.cpp
localization_bonus/: CMakeLists.txt  package.xml
localization_bonus/src/: localization_bonus.cpp
robot_teleop/: CMakeLists.txt
robot_teleop/scripts/: wheel_teleop_key  wheel_teleop_key_new
rockerbogie_urdf_modified/: CMakeLists.txt  package.xml
rockerbogie_urdf_modified/config/: joint_names_rockerbogie_urdf_modified.yaml
rockerbogie_urdf_modified/launch/: display.launch  gazebo.launch
rockerbogie_urdf_modified/meshes/: 11_link.STL  12_link.STL  13_link.STL  21_link.STL  22_link.STL  23_link.STL  base_link.STL  body_link.STL  leg1_link.STL  leg2_link.STL
rockerbogie_urdf_modified/urdf/: rockerbogie_urdf_modified.csv  rockerbogie_urdf_modified.urdf
